(fix) Tweak vertical spacing in text

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -38,7 +38,7 @@ body {
 
   p {
     font-size: 1rem;
-    line-height: 1.6rem;
+    line-height: 1.68rem;
   }
   h1 {
     font-size: 2.3rem;
