--- a/src/scss/templates/blog-post.scss
+++ b/src/scss/templates/blog-post.scss
@@ -39,7 +39,7 @@
   ul > li,
   p {
     font-size: 1rem;
-    line-height: 1.75;
+    margin: 0 0 1.2rem;
   }
 
   .post-body {
